package com.g4.odontohub.relacionamentopaciente.recall.domain.model;

public record RecallId(Long id) {}
